add CSS rules for HB widgets

--- a/scss/_pagination.scss
+++ b/scss/_pagination.scss
@@ -6,14 +6,17 @@
 
         }
 
-        span {
+        .next {
 
         }
 
-        a {
+        .prev {
 
         }
 
+        .current {
+
+        }
     }
 
 }
