--- a/scss/shortcodes/_services-list.scss
+++ b/scss/shortcodes/_services-list.scss
@@ -36,4 +36,10 @@
 
     }
 
+    .mphb-pagination {
+
+        // here can be user rules from "./scss/pagination.scss" to override styles
+
+    }
+
 }
