--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,3 +1,13 @@
+/*!
+ * MotoPress Hotel Booking Style Kit v1.0.0
+ * Copyright 2023 MotoPress
+ * Import this file to the main sass/scss file of your theme.
+ * Example: @import "mphb-style-kit/scss/style"
+ *
+ * For more information visit https://github.com/motopress/
+ * License GNU GPL v2 or later.
+ */
+
 @import 'price';
 @import 'accommodation-attributes';
 @import 'calendar';
@@ -20,3 +30,6 @@
 @import 'shortcodes/search-results';
 @import 'shortcodes/services-list';
 @import 'shortcodes/single-accommodation';
+
+@import 'widgets/accommodations-list';
+@import 'widgets/availability-search';
