--- a/scss/shortcodes/_accommodations-list.scss
+++ b/scss/shortcodes/_accommodations-list.scss
@@ -105,4 +105,10 @@
 
     }
 
+    .mphb-pagination {
+
+         // here can be user rules from "./scss/pagination.scss" to override styles
+
+    }
+
 }
